# dactyl-lynx-keyboard

./: .flake8  .gitmodules  Pipfile  README.md  dactyl-lynx-6x5-1920x1440.ini  dactyl-lynx-6x5-1920x1440.pov  dactyl-lynx-6x5-1920x950.ini  dactyl-lynx-6x5-1920x950.pov  povray.ini  project.clj  pyproject.toml  render.pov
dactyl_lynx_keyboard/: __init__.py  assembly.py  dactyl_lynx.py  keycaps.py  lcd_mount.py  mini_din_connector_mount.py  trackpoint_mount.py
qmk-guide/: dactyl-lynx-dvorak.json
scripts/: generate-syntax-highlighting.sh  render-stls.sh
templates/: custom.css  module.html.jinja2  syntax-highlighting.css  theme.css
things/: dactyl-lynx-6x5-left-bottom-with-feet.scad  dactyl-lynx-6x5-left-bottom-with-nuts.scad  dactyl-lynx-6x5-left-bottom.stl  dactyl-lynx-6x5-left-connector.scad  dactyl-lynx-6x5-left-connector.stl  dactyl-lynx-6x5-left-finger-bottom-cover-with-feet-and-tripod-mount.scad  dactyl-lynx-6x5-left-finger-bottom-cover-with-feet-and-tripod-mount.stl  dactyl-lynx-6x5-left-finger-bottom-cover-with-feet.scad  dactyl-lynx-6x5-left-finger-bottom-cover-with-feet.stl  dactyl-lynx-6x5-left-finger-bottom-cover-with-nuts.scad  dactyl-lynx-6x5-left-finger-bottom-cover-with-nuts.stl  dactyl-lynx-6x5-left-finger-bottom-cover-with-tripod-mount.scad  dactyl-lynx-6x5-left-finger-bottom-cover-with-tripod-mount.stl  dactyl-lynx-6x5-left-finger-bottom-cover.scad  dactyl-lynx-6x5-left-finger-bottom-cover.stl  dactyl-lynx-6x5-left-finger.scad  dactyl-lynx-6x5-left-finger.stl  dactyl-lynx-6x5-left-lcd-mount.scad  dactyl-lynx-6x5-left-lcd-mount.stl  (+28 more)
(+10 files in other folders)
